--- a/provisioner/application.yaml
+++ b/provisioner/application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/kosa-infra/kosa-argocd.git
+    repoURL: https://github.com/Lidoca/kosa-argocd.git
     targetRevision: HEAD
     path: provisioner/
   destination:
