--- a/provisioner/provision-auth-deployment.yaml
+++ b/provisioner/provision-auth-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: provisioner-auth
-          image: 
+          image: docker.io/folylyfo/provisioner-auth:c7be641034a103762353684c8185ae4fbbe6e3f1
           ports:
             - containerPort: 80
           envFrom:
