--- a/provisioner/nginx-proxy-deployment.yaml
+++ b/provisioner/nginx-proxy-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: nginx-proxy
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: nginx-proxy
@@ -17,6 +17,13 @@ spec:
           image: nginx:alpine
           ports:
             - containerPort: 80
+          resources:
+            requests:
+              cpu: "50m"
+              memory: "64Mi"
+            limits:
+              cpu: "200m"
+              memory: "128Mi"
           volumeMounts:
             - name: nginx-conf
               mountPath: /etc/nginx/conf.d/default.conf
