--- a/provisioner/provision-auth-deployment.yaml
+++ b/provisioner/provision-auth-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: provisioner-auth
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: provisioner-auth
@@ -20,3 +20,10 @@ spec:
           envFrom:
             - secretRef:
                 name: provisioner-env
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "256Mi"
+            limits:
+              cpu: "500m"
+              memory: "512Mi"
